--- a/build.yaml
+++ b/build.yaml
@@ -15,10 +15,22 @@
 #     shield: corne_left
 #     cmake-args: -DCONFIG_ZMK_USB_LOGGING=y
 #     artifact-name: corne_left_with_logging
-#
+
+#     shield: corne_left nice_view_adapter nice_view
+#     shield: corne_right nice_view_adapter nice_view
+
+#     shield: corne_left nice_view
+#     shield: corne_right nice_view
+
 ---
 include:
   - board: nice_nano_v2
-    shield: corne_left
+    shield: corne_left nice_view_adapter nice_view
   - board: nice_nano_v2
-    shield: corne_right
+    shield: corne_right nice_view_adapter nice_view
+
+#include:
+#  - board: nice_nano_v2
+#    shield: lily58_left nice_view_adapter nice_view
+#  - board: nice_nano_v2
+#    shield: lily58_right nice_view_adapter nice_view
